azurermps/1.2.9/AzureRM.Resources/index.md
---
Module Name: AzureRM.Resources
Module Guid: ab3ca893-26fe-44b0-bd3c-8933df144d7b
Locale: en-US
updated_at: 05/02/2017 17:05 PM
ms.date: 05/02/2017
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v1.0.4.3/AzureRM.Resources.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v1.0.4.3/AzureRM.Resources.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/fdff926f5dd35f9020f210f87b450464ba162edc
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: true
ms.service: azure-resource-manager
Export-AzureRmResourceGroup: Others
Find-AzureRmResource: Resources
Find-AzureRmResourceGroup: Resources
Get-AzureRmADAppCredential: Others
Get-AzureRmADApplication: Active Directory
Get-AzureRmADGroup: Active Directory
Get-AzureRmADGroupMember: Active Directory
Get-AzureRmADServicePrincipal: Active Directory
Get-AzureRmADSpCredential: Others
Get-AzureRmADUser: Active Directory
Get-AzureRmAuthorizationChangeLog: Profile
Get-AzureRmLocation: Others
Get-AzureRmPolicyAssignment: Policies
Get-AzureRmPolicyDefinition: Policies
Get-AzureRmProviderFeature: Resources
Get-AzureRmProviderOperation: Resources
Get-AzureRmResource: Policies
Get-AzureRmResourceGroup: Resources
Get-AzureRmResourceGroupDeployment: Resources
Get-AzureRmResourceGroupDeploymentOperation: Resources
Get-AzureRmResourceLock: Resources
Get-AzureRmResourceProvider: Resources
Get-AzureRmRoleAssignment: Resources
Get-AzureRmRoleDefinition: Resources
Invoke-AzureRmResourceAction: Resources
Move-AzureRmResource: Resources
New-AzureRmADAppCredential: Others
New-AzureRmADApplication: Active Directory
New-AzureRmADServicePrincipal: Active Directory
New-AzureRmADSpCredential: Others
New-AzureRmADUser: Others
New-AzureRmPolicyAssignment: Policies
New-AzureRmPolicyDefinition: Policies
New-AzureRmResource: Resources
New-AzureRmResourceGroup: Resources
New-AzureRmResourceGroupDeployment: Resources
New-AzureRmResourceLock: Resources
New-AzureRmRoleAssignment: Resources
New-AzureRmRoleDefinition: Resources
Register-AzureRmProviderFeature: Resources
Register-AzureRmResourceProvider: Resources
Remove-AzureRmADAppCredential: Others
Remove-AzureRmADApplication: Active Directory
Remove-AzureRmADServicePrincipal: Active Directory
Remove-AzureRmADSpCredential: Others
Remove-AzureRmADUser: Others
Remove-AzureRmPolicyAssignment: Policies
Remove-AzureRmPolicyDefinition: Policies
Remove-AzureRmResource: Resources
Remove-AzureRmResourceGroup: Resources
Remove-AzureRmResourceGroupDeployment: Resources
Remove-AzureRmResourceLock: Resources
Remove-AzureRmRoleAssignment: Resources
Remove-AzureRmRoleDefinition: Resources
Save-AzureRmResourceGroupDeploymentTemplate: Others
Set-AzureRmADApplication: Others
Set-AzureRmADServicePrincipal: Others
Set-AzureRmADUser: Others
Set-AzureRmPolicyAssignment: Policies
Set-AzureRmPolicyDefinition: Policies
Set-AzureRmResource: Resources
Set-AzureRmResourceGroup: Resources
Set-AzureRmResourceLock: Resources
Set-AzureRmRoleDefinition: Resources
Stop-AzureRmResourceGroupDeployment: Resources
Test-AzureRmResourceGroupDeployment: Resources
Unregister-AzureRmResourceProvider: Resources
_isModulePage: true
---

# AzureRM.Resources Module
## Description
{{Manually Enter Description Here}}

## AzureRM.Resources Cmdlets
### [Find-AzureRmResource](Find-AzureRmResource.md)
Searches for resources using the specified parameters.

### [Find-AzureRmResourceGroup](Find-AzureRmResourceGroup.md)
Searches for resource group using the specified parameters.

### [Get-AzureRmADApplication](Get-AzureRmADApplication.md)
{{Fill in the Synopsis}}

### [Get-AzureRmADGroup](Get-AzureRmADGroup.md)
Filters active directory groups.

### [Get-AzureRmADGroupMember](Get-AzureRmADGroupMember.md)
Get a group members.

### [Get-AzureRmADServicePrincipal](Get-AzureRmADServicePrincipal.md)
Filters active directory service principals.

### [Get-AzureRmADUser](Get-AzureRmADUser.md)
Filters active directory users.

### [Get-AzureRmAuthorizationChangeLog](Get-AzureRmAuthorizationChangeLog.md)
Gets access change history for the selected subscription for the specified time range i.e.
role assignments that were added or removed, including classic administrators (co-administrators and service administrators).
Maximum duration that can be queried is 15 days (going back up to past 90 days).

### [Get-AzureRmPolicyAssignment](Get-AzureRmPolicyAssignment.md)
Gets a list of all policy assignments or a particular assignment identified by name and scope or by Id

### [Get-AzureRmPolicyDefinition](Get-AzureRmPolicyDefinition.md)
Gets a list of all the policy definitions or a specific policy definition identified by Name

### [Get-AzureRmProviderFeature](Get-AzureRmProviderFeature.md)
{{Manually Enter Get-AzureRmProviderFeature Description Here}}

### [Get-AzureRmProviderOperation](Get-AzureRmProviderOperation.md)
Gets the operations for an Azure resource provider that are securable using Azure RBAC.

### [Get-AzureRmResource](Get-AzureRmResource.md)
Gets Azure resources

### [Get-AzureRmResourceGroup](Get-AzureRmResourceGroup.md)
Gets Azure resource groups

### [Get-AzureRmResourceGroupDeployment](Get-AzureRmResourceGroupDeployment.md)
Gets the deployments in a resource group.

### [Get-AzureRmResourceGroupDeploymentOperation](Get-AzureRmResourceGroupDeploymentOperation.md)
Gets the resource group deployment operation

### [Get-AzureRmResourceLock](Get-AzureRmResourceLock.md)
Gets the azure resource lock.

### [Get-AzureRmResourceProvider](Get-AzureRmResourceProvider.md)
{{Manually Enter Get-AzureRmResourceProvider Description Here}}

### [Get-AzureRmRoleAssignment](Get-AzureRmRoleAssignment.md)
Lists Azure RBAC role assignments at the specified scope.
By default it lists all role assignments in the selected Azure subscription.
Use respective parameters to list assignments to a specific user, or to list assignments on a specific resource group or resource.

### [Get-AzureRmRoleDefinition](Get-AzureRmRoleDefinition.md)
Lists all Azure RBAC roles that are available for assignment.

### [Invoke-AzureRmResourceAction](Invoke-AzureRmResourceAction.md)
{{Fill in the Synopsis}}

### [Move-AzureRmResource](Move-AzureRmResource.md)
{{Manually Enter Move-AzureRmResource Description Here}}

### [New-AzureRmADApplication](New-AzureRmADApplication.md)
Creates a new azure active directory application.

### [New-AzureRmADServicePrincipal](New-AzureRmADServicePrincipal.md)
Creates a new azure active directory service principal.

### [New-AzureRmPolicyAssignment](New-AzureRmPolicyAssignment.md)
Creates a new policy assignment

### [New-AzureRmPolicyDefinition](New-AzureRmPolicyDefinition.md)
Creates a new policy definition

### [New-AzureRmResource](New-AzureRmResource.md)
Creates a new resource in a resource group

### [New-AzureRmResourceGroup](New-AzureRmResourceGroup.md)
Creates an Azure resource group and its resources

### [New-AzureRmResourceGroupDeployment](New-AzureRmResourceGroupDeployment.md)
Add an Azure deployment to a resource group.

### [New-AzureRmResourceLock](New-AzureRmResourceLock.md)
Create a new resource lock.

### [New-AzureRmRoleAssignment](New-AzureRmRoleAssignment.md)
Assigns the specified RBAC role to the specified principal, at the specified scope.

### [New-AzureRmRoleDefinition](New-AzureRmRoleDefinition.md)
Creates a custom role in Azure RBAC.
Provide either a JSON role definition file or a PSRoleDefinition object as input.
First, use the Get-AzureRmRoleDefinition command to generate a baseline role definition object.
Then, modify its properties as required.
Finally, use this command to create a custom role using role definition.

### [Register-AzureRmProviderFeature](Register-AzureRmProviderFeature.md)
{{Manually Enter Register-AzureRmProviderFeature Description Here}}

### [Register-AzureRmResourceProvider](Register-AzureRmResourceProvider.md)
{{Manually Enter Register-AzureRmResourceProvider Description Here}}

### [Remove-AzureRmADApplication](Remove-AzureRmADApplication.md)
Deletes the azure active directory application.

### [Remove-AzureRmADServicePrincipal](Remove-AzureRmADServicePrincipal.md)
Deletes the azure active directory service principal.

### [Remove-AzureRmPolicyAssignment](Remove-AzureRmPolicyAssignment.md)
Removes the specified policy assignment

### [Remove-AzureRmPolicyDefinition](Remove-AzureRmPolicyDefinition.md)
Removes the policy definition

### [Remove-AzureRmResource](Remove-AzureRmResource.md)
Deletes a resource

### [Remove-AzureRmResourceGroup](Remove-AzureRmResourceGroup.md)
Deletes a resource group.

### [Remove-AzureRmResourceGroupDeployment](Remove-AzureRmResourceGroupDeployment.md)
{{Fill in the Synopsis}}

### [Remove-AzureRmResourceLock](Remove-AzureRmResourceLock.md)
Removes the azure resource lock.

### [Remove-AzureRmRoleAssignment](Remove-AzureRmRoleAssignment.md)
Removes a role assignment to the specified principal who is assigned to a particular role at a particular scope.

### [Remove-AzureRmRoleDefinition](Remove-AzureRmRoleDefinition.md)
Deletes a custom role in Azure RBAC.
The role to be deleted is specified using the Id property of the role.
Delete will fail if there are existing role assignments made to the custom role.

### [Set-AzureRmPolicyAssignment](Set-AzureRmPolicyAssignment.md)
Updates existing policy assignment

### [Set-AzureRmPolicyDefinition](Set-AzureRmPolicyDefinition.md)
Updates an existing policy definition

### [Set-AzureRmResource](Set-AzureRmResource.md)
Changes the properties of an Azure resource.

### [Set-AzureRmResourceGroup](Set-AzureRmResourceGroup.md)
Changes the properties of a resource group

### [Set-AzureRmResourceLock](Set-AzureRmResourceLock.md)
Updates an existing resource lock.

### [Set-AzureRmRoleDefinition](Set-AzureRmRoleDefinition.md)
Modifies a custom role in Azure RBAC.
Provide the modified role definition either as a JSON file or as a PSRoleDefinition.
First, use the Get-AzureRmRoleDefinition command to retrieve the custom role that you wish to modify.
Then, modify the properties that you wish to change.
Finally, save the role definition using this command.

### [Stop-AzureRmResourceGroupDeployment](Stop-AzureRmResourceGroupDeployment.md)
Cancels a resource group deployment

### [Test-AzureRmResourceGroupDeployment](Test-AzureRmResourceGroupDeployment.md)
{{Fill in the Synopsis}}

### [Unregister-AzureRmResourceProvider](Unregister-AzureRmResourceProvider.md)
{{Manually Enter Unregister-AzureRmResourceProvider Description Here}}

